Fixed alignment issues in UI

--- a/MusicStore/Content/Less/Site.less
+++ b/MusicStore/Content/Less/Site.less
@@ -1,5 +1,26 @@
-﻿body {
-    .album {
-        padding: 2px, 3px;
+﻿//album related styling
+.album {
+    float: left;
+    padding: 20px 20px 20px 0px;
+    cursor: pointer;
+    font-size: 14px;
+
+    img {
+        height: 150px;
+        width: 150px;
+        border: 1px solid #c7c7c7;
+        padding: 4px;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
     }
+}
+
+#wrapper
+{
+    width: 80%;
+    max-width:none;
+    margin: 0 auto;
+    margin-bottom: 100px;
 }
